RESOLVED FIXED280575
[FFC] Fix imported/w3c/web-platform-tests/css/css-align/self-alignment/self-align-safe-unsafe-flex-001.html
https://bugs.webkit.org/show_bug.cgi?id=280575
Summary [FFC] Fix imported/w3c/web-platform-tests/css/css-align/self-alignment/self-a...
alan
Reported 2024-09-28 18:14:28 PDT
ssia
Attachments
[fast-cq]Patch (1.77 KB, patch)
2024-09-28 18:15 PDT, alan
no flags
alan
Comment 1 2024-09-28 18:15:50 PDT
Created attachment 472724 [details] [fast-cq]Patch
EWS
Comment 2 2024-09-29 11:08:35 PDT
Committed 284432@main (69d095a83dc1): <https://commits.webkit.org/284432@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 472724 [details].
Radar WebKit Bug Importer
Comment 3 2024-09-29 11:09:16 PDT
Note You need to log in before you can comment on or make changes to this bug.