[FFC] Fix imported/w3c/web-platform-tests/css/css-align/self-alignment/self-align-safe-unsafe-flex-001.html https://bugs.webkit.org/show_bug.cgi?id=280575

Reviewed by Antti Koivisto.

Add support for cross axis safe fallback for align-self.

* Source/WebCore/layout/formattingContexts/flex/FlexLayout.cpp:
(WebCore::Layout::FlexLayout::handleCrossAxisAlignmentForFlexItems const):

Canonical link: https://commits.webkit.org/284432@main